[package]
name = "simple-octree"
version = "0.1.0"
authors = ["Chris Williams <chris@chrispwill.com>"]
edition = "2018"
description = "A simple octree implementation written in Rust."
license = "MIT"
repository = "https://github.com/ChrisPWill/simple-octree"
readme = "README.md"

[dependencies]
len-trait = "0.6.1"
num = "0.2.1"
